--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.IN2000_gruppe3">
+            android:theme="@style/Theme.IN2000_gruppe3"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
